--- a/HTML5Application/public_html/index.html
+++ b/HTML5Application/public_html/index.html
@@ -9,7 +9,7 @@
 <h1>Hello <i>FTFL</i></h1>
 <!-- Using Relative Path -->
 <!-- Introducing attribute (key-value) -->
-<img src="image/sports-q-c-300-100-8.jpg" />
+<img alt="FTFLeans are sporting" src="image/sports-q-c-300-100-8.jpg" />
 <input type ="text" disabled="disabled" />  
 <p> We are FTFLeans </p>
 
