--- a/CSS/css.html
+++ b/CSS/css.html
@@ -4,5 +4,10 @@
 </head>
 <body>
 	<h1> Hi, FTFL</h1>
+	<div>
+		<strong>Name</strong>
+		<span>shahed ruhi</span> 
+    </div>
+
 </body>		
 </html>
