add & crete CSS

--- a/CSS/css.html
+++ b/CSS/css.html
@@ -1,6 +1,15 @@
 <html>
 <head>
 	<title>Working with CSS3</title>
+	<style type="text/css">
+			#content {
+            		text-align: justify;
+            		background-color: #efefef;
+            		border: 2px solid #8e8c8c;
+            		height: 300px;
+        		}
+
+	</style>
 </head>
 <body>
 	<h1> Hi, FTFL</h1>
