span color change in CSS

--- a/CSS/css.html
+++ b/CSS/css.html
@@ -2,14 +2,25 @@
 <head>
 	<title>Working with CSS3</title>
 	<style type="text/css">
+		/* css comment
+		   css syntex
 
+		   selectors {
+			//rules
+		   }
+
+		*/
+		span{
+			background: green;
+		}
+		
 	</style>
 </head>
 <body>
 	<h1> Hi, FTFL</h1>
 	<div>
-		<strong>Name</strong>
-		<span>shahed ruhi</span> 
+		<strong>BATCH</strong>
+		<span>FTFL01</span> 
     </div>
 
 </body>		
