set font color red to h1

--- a/CSS/css.html
+++ b/CSS/css.html
@@ -13,7 +13,10 @@
 		span{
 			background: green;
 		}
-		
+		/* set font color red to h1 */
+		h1{
+			color: red;
+		}
 	</style>
 </head>
 <body>
