--- a/CSS/css.html
+++ b/CSS/css.html
@@ -22,7 +22,7 @@
 <body>
 	<h1> Hi, FTFL</h1>
 	<div>
-		<strong>BATCH</strong>
+		<strong style="background-color:yellow">BATCH</strong>
 		<span>FTFL01</span> 
     </div>
 
