--- a/CSS/css.html
+++ b/CSS/css.html
@@ -1,6 +1,10 @@
 <html>
 <head>
 	<title>Working with CSS3</title>
+	<!--including an external CSS -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!--Embed CSS -->
+
 	<style type="text/css">
 		/* css comment
 		   css syntex
@@ -11,7 +15,7 @@
 
 		*/
 		span{
-			background: green;
+			background-color: green;
 		}
 		/* set font color red to h1 */
 		h1{
@@ -20,7 +24,7 @@
 	</style>
 </head>
 <body>
-	<h1> Hi, FTFL</h1>
+	<h1> Hi, <i>FTFL</i></h1>
 	<div>
 		<strong style="background-color:yellow">BATCH</strong>
 		<span>FTFL01</span> 
