--- a/CSS/zen.html
+++ b/CSS/zen.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>CSS Zen Garden: The Beauty of CSS Design</title>
+	<title>Understanding CSS3 selector</title>
 
-	<link rel="stylesheet" media="screen" href="/214/214.css?v=8may2013">
+	<link rel="stylesheet" media="screen" href="css/selectorsexample.css">
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.csszengarden.com/zengarden.xml">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
