--- a/CSS/zen.html
+++ b/CSS/zen.html
@@ -193,6 +193,10 @@
 -->
 <div class="extra1" role="presentation"></div><div class="extra2" role="presentation"></div><div class="extra3" role="presentation"></div>
 <div class="extra4" role="presentation"></div><div class="extra5" role="presentation"></div><div class="extra6" role="presentation"></div>
+<div>
 
+</div>
+	hese <i> superfluous divs/spans</i> were originally provided <b>as catch-alls t</b>o add extra <i>imagery.
+	These days we</i> have full ::before and ::after support, favour using those instead.
 </body>
 </html>
