understanding selector specificity

--- a/CSS/specificity.html
+++ b/CSS/specificity.html
@@ -2,9 +2,18 @@
 <head>
 	<title>understanding selector specificity</title>
 	<style type="text/css">
-			h1{
+			strong{
 				color:green;
 			}
+
+			span{
+				color:green;
+			}
+			div span{
+				color:blue;
+			}
+
+
 
 	</style>
 </head>
