mergin change editing

--- a/CSS/boxmodel.html
+++ b/CSS/boxmodel.html
@@ -18,10 +18,12 @@
 			strong{
 
 				background-color: orange;
+				margin-right: 20px;
 			}
 			
 			span{
 				background-color: pink;
+				margin-left: 50px;
 			}
 			
 
@@ -31,8 +33,7 @@
 <body>
 	<h1> Hi, FTFL</h1>
 	<div>
-		<strong style="background-color:yellow">BATCH</strong> 
-		<span>FTFL01</span> 
+		<strong>BATCH</strong><span>FTFL01</span> 
     </div>
 
 </body>		
