--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -3,6 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <head>
 <title>GORZON SOLUTIONS PVT. LTD (Easy Solutions | Easy Life)</title>
+<link rel="stylesheet" type="text/css" href="default.css" />
 </head>
 <body>        
           
