--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -4,13 +4,24 @@
 <head>
 <title>GORZON SOLUTIONS PVT. LTD (Easy Solutions | Easy Life)</title>
 <link rel="stylesheet" type="text/css" href="default.css" />
+<style type="text/css">
+	body {
+			color: red;
+			background-color: lightblue;
+			font-size: 100%;
+		}
+
+		p {
+			line-height: 1.5em;
+		}
+</style>
 </head>
 <body>        
           
 <table>
 	<tr>
 		<td>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		</td>
 		<td>
 			<img alt="gorzonbanner" width=75% align="center" src="image/banner.jpg" />
