--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -15,6 +15,12 @@
 			line-height: 1.5em;
 		}
 </style>
+<script type="text/javascript" src="somescript.js"></script>
+<script type="text/javascript">
+function koala() {
+alert('DANGER! DANGER!');
+}
+</script>
 </head>
 <body>        
           
