use <noscript> tags

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -3,7 +3,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <head>
 <title>GORZON SOLUTIONS PVT. LTD (Easy Solutions | Easy Life)</title>
+
 <link rel="stylesheet" type="text/css" href="default.css" />
+
 <style type="text/css">
 	body {
 			color: red;
@@ -15,12 +17,17 @@
 			line-height: 1.5em;
 		}
 </style>
+
 <script type="text/javascript" src="somescript.js"></script>
 <script type="text/javascript">
 function koala() {
 alert('DANGER! DANGER!');
 }
 </script>
+
+<noscript>
+<p>What? No JavaScript?</p>
+</noscript>
 </head>
 <body>        
           
