User Stories of Sub Group - E submit

--- a/Java Script/js.html
+++ b/Java Script/js.html
@@ -2,6 +2,7 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <head>
+<abbr title="GORZON SOLUTIONS PVT. LTD (Easy Solutions | Easy Life)">HTML HOME PAGE</abbr>
 <title>GORZON SOLUTIONS PVT. LTD (Easy Solutions | Easy Life)</title>
 
 <link rel="stylesheet" type="text/css" href="default.css" />
