use <acronym> tag

--- a/Java Script/js.html
+++ b/Java Script/js.html
@@ -4,7 +4,7 @@
 <head>
 <abbr title="GORZON SOLUTIONS PVT. LTD (Easy Solutions | Easy Life)">HTML HOME PAGE OF THE COMPANY</abbr>
 <title>GORZON SOLUTIONS PVT. LTD (Easy Solutions | Easy Life)</title>
-
+<acronym title="Cascading Style Sheets">CSS</acronym>
 <link rel="stylesheet" type="text/css" href="default.css" />
 
 <style type="text/css">
