--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -2,6 +2,7 @@
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <head>
+
 <title>GORZON SOLUTIONS PVT. LTD (Easy Solutions | Easy Life)</title>
 
 <link rel="stylesheet" type="text/css" href="default.css" />
@@ -45,19 +46,35 @@ alert('DANGER! DANGER!');
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		</td>
 		<td>
+			<abbr title="GORZON SOLUTIONS PVT. LTD (Easy Solutions | Easy Life)">HTML HOME PAGE OF THE COMPANY</abbr>
+			
+			<acronym title="Cascading Style Sheets">CSS</acronym>
+
+			<p>The Slogan of our company <bdo dir="rtl">word</bdo> is "Easy Solutions | Easy Life".</p>
+
 			<strong>Greetings from GORZON SOLUTIONS PVT. LTD </strong>
+			
 			<span>Greetings from GORZON SOLUTIONS PVT. LTD </span>
+			
 			<h1>Greetings from GORZON SOLUTIONS PVT. LTD </h1>
+			
 			<h2>Greetings from GORZON SOLUTIONS PVT. LTD </h2>
+			
 			<h3>Greetings from GORZON SOLUTIONS PVT. LTD </h3>
+			
 			<h4>Greetings from GORZON SOLUTIONS PVT. LTD </h4>
+			
 			<h5>Greetings from GORZON SOLUTIONS PVT. LTD </h5>
+			
 			<h6>Greetings from GORZON SOLUTIONS PVT. LTD </h6>
 	
 			<p>This is an IT solution Company</p>
+			
 			<div>Our Vision - is to forge radical IT solutions & become the number one partner for the entire spectrum of world's business
 			</div>
+			
 			<p>Here is a quote from our memodendurum:</p>
+			
 			<blockquote>Mission - is to make technology an asset for businesses which will deliver long-term commercial benefits through sate-of-the-art technology, <em>really</em> improved IT efficiency, business profitability innovations to make a positive differences in businesses</blockquote>
 			
 			<p>We focus on four things: (using unnumbered list)</p>	
