--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -69,6 +69,8 @@ alert('DANGER! DANGER!');
 			<h6>Greetings from GORZON SOLUTIONS PVT. LTD </h6>
 	
 			<p>This is an IT solution Company</p>
+
+			<p>And <cite>Our CEO</cite> said <q>We work for the people</q>.</p>
 			
 			<div>Our Vision - is to forge radical IT solutions & become the number one partner for the entire spectrum of world's business
 			</div>
