--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -52,6 +52,7 @@ alert('DANGER! DANGER!');
 
 			<p>The Slogan of our company <bdo dir="rtl">word</bdo> is "Easy Solutions | Easy Life".</p>
 
+
 			<strong>Greetings from GORZON SOLUTIONS PVT. LTD </strong>
 			
 			<span>Greetings from GORZON SOLUTIONS PVT. LTD </span>
@@ -71,6 +72,8 @@ alert('DANGER! DANGER!');
 			<p>This is an IT solution Company</p>
 
 			<p>And <cite>Our CEO</cite> said <q>We work for the people</q>.</p>
+
+			<p>He also said <q>For the people </q> and we said <q>YES</q></p>
 			
 			<div>Our Vision - is to forge radical IT solutions & become the number one partner for the entire spectrum of world's business
 			</div>
