--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -152,6 +152,7 @@ alert('DANGER! DANGER!');
 			</address>
 
 			<p>This page is created by <code>HTML</code>.</p>
+			<p>With help form this <ins cite="http://www.htmlcodeexamples.com.html" datetime="20031024">website</ins></p>
 
 		</td>
 	</tr>
