--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -153,6 +153,7 @@ alert('DANGER! DANGER!');
 
 			<p>This page is created by <code>HTML</code>.</p>
 			<p>With help form this <ins cite="http://www.htmlcodeexamples.com.html" datetime="20031024">website</ins></p>
+			<p>It really was<del cite="rarara.html" datetime="20031023">n't</del> very Helpful.</p>
 
 		</td>
 	</tr>
