--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -152,10 +152,25 @@ alert('DANGER! DANGER!');
 			</address>
 
 			<p>This page is created by <code>HTML</code>.</p>
+			
 			<p>With help form this <ins cite="http://www.htmlcodeexamples.com.html" datetime="20031024">website</ins></p>
+			
 			<p>It really was<del cite="rarara.html" datetime="20031023">n't</del> very Helpful.</p>
+			
 			<p>This page will generate fully in <dfn title="Microsoft web browser">Internet Explorer</dfn> and <dfn title="Mozila firefox">Mozila Firefox</dfn>.</p>
+			
 			<p>Type <kbd>www.gorzonsoutionspvt.com</kbd> into your browser.</p>
+
+			<p>The basic structure of this HTML document:</p>
+			<pre>
+			<code>&lt;html&gt;</code>
+			<code>&lt;head&gt;</code>
+			<code>&lt;/head&gt;</code>
+			<code>&lt;body&gt;</code>
+			<code>[stuff]</code>
+			<code>&lt;/body&gt;</code>
+			<code>&lt;/html&gt; </code>
+			</pre>
 
 		</td>
 	</tr>
