--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -77,6 +77,8 @@ alert('DANGER! DANGER!');
 			
 			<div>Our Vision - is to forge radical IT solutions & become the number one partner for the entire spectrum of world's business
 			</div>
+
+			<p>If you select our coampny, you will receive the message <samp>You will get EASY SOLUTION for EASY LIFE</samp>.</p>
 			
 			<p>Here is a quote from our memodendurum:</p>
 			
@@ -171,6 +173,8 @@ alert('DANGER! DANGER!');
 			<code>&lt;/body&gt;</code>
 			<code>&lt;/html&gt; </code>
 			</pre>
+
+
 
 		</td>
 	</tr>
