--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -174,7 +174,7 @@ alert('DANGER! DANGER!');
 			<code>&lt;/html&gt; </code>
 			</pre>
 
-
+			<code><var>Visitorcount</var> = 6878;</code>
 
 		</td>
 	</tr>
