--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -175,6 +175,12 @@ alert('DANGER! DANGER!');
 			</pre>
 
 			<code><var>Visitorcount</var> = 6878;</code>
+			<img src ="planets.gif" width="145" height="126" alt="From The World" usemap ="#planetmap" />
+			<map name="planetmap">
+			<area shape="rect" coords="0,0,82,126" href="sun.htm" alt="Sun" />
+			<area shape="circle" coords="90,58,3" href="mercur.htm" alt="Mercury" />
+			<area shape="circle" coords="124,58,8" href="venus.htm" alt="Venus" />
+			</map>
 
 		</td>
 	</tr>
