use object & param tags

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -187,6 +187,12 @@ alert('DANGER! DANGER!');
 			<area shape="circle" coords="124,58,8" href="venus.htm" alt="Venus" />
 			</map>
 
+			<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="someplace/swflash.cab" width="200" height="300" id="penguin">
+			<param name="movie" value="flash/penguin.swf" />
+			<param name="quality" value="high" />
+			</object>
+
+
 		</td>
 	</tr>
 </table>
