Use table, tr, td, th ,caption, tbody tags

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -87,6 +87,18 @@ alert('DANGER! DANGER!');
 			
 			<blockquote>Mission - is to make technology an asset for businesses which will deliver long-term commercial benefits through sate-of-the-art technology, <em>really</em> improved IT efficiency, business profitability innovations to make a positive differences in businesses</blockquote>
 			
+			<p>Our Board of Directors</p>	
+			<table summary="One Person is selected from Each TRACK.">
+			<caption>One Person is selected from Each TRACK.</caption>
+			<tbody><tr><th scope="col">Track</th> <th scope="col">Incharge</th> <th scope="col">Total Team member</th>
+			</tr><tr><th scope="row">ITS</th> <td align="RIGHT"> COO </td><td align="RIGHT"> 9</td></tr>
+			<tr><th scope="row">Management</th> <td align="RIGHT">CMO </td><td align="RIGHT">7</td></tr>
+			<tr><th scope="row">ITSS</th> <td align="RIGHT">CSSO </td><td align="RIGHT">2</td></tr>
+			<tr><th scope="row">ITES (GUI)</th>  <td align="RIGHT">CGD </td><td align="RIGHT">3</td></tr>
+			<tr><th scope="row">ITES (SEO)</th>  <td align="RIGHT">CSEO </td><td align="RIGHT">3</td></tr>
+			</tbody>
+			</table>
+
 			<p>We focus on four things: (using unnumbered list)</p>	
 			<ul>
   			<li> One. 1. Why our company should exist ...?
@@ -150,6 +162,9 @@ alert('DANGER! DANGER!');
   			</dt><dd> GORZON SOLUTIONS PVT. LTD
 			</dd>
 			</dl>
+
+
+
 
 			<address>
 			<a href="mailto:gorzon@it.com">gorzon@it.com</a><br>
