use thead & tfooter tags

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -89,6 +89,20 @@ alert('DANGER! DANGER!');
 			
 			<p>Our Board of Directors</p>	
 			<table summary="One Person is selected from Each TRACK.">
+			<thead>
+			<tr>
+			<th>DEPERTMENTS</th>
+			<th>COMMUNICATION PERSON</th>
+			<th>OUR COLUGES</th>
+			</tr>
+			</thead>
+			<tfoot>
+			<tr>
+			<td>END</td>
+			<td>END</td>
+			<td>END</td>
+			</tr>
+			</tfoot>
 			<caption>One Person is selected from Each TRACK.</caption>
 			<tbody><tr><th scope="col">Track</th> <th scope="col">Incharge</th> <th scope="col">Total Team member</th>
 			</tr><tr><th scope="row">ITS</th> <td align="RIGHT"> COO </td><td align="RIGHT"> 9</td></tr>
