use col & colgroup tags

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -89,6 +89,11 @@ alert('DANGER! DANGER!');
 			
 			<p>Our Board of Directors</p>	
 			<table summary="One Person is selected from Each TRACK.">
+			<colgroup>
+			<col class="column1" />
+			<col class="column2" />
+			<col class="columns3and4" span="2" />
+			</colgroup>	
 			<thead>
 			<tr>
 			<th>DEPERTMENTS</th>
