--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -190,6 +190,8 @@ alert('DANGER! DANGER!');
 			BCC, Agargaon, Dhaka, Bangladesh.
 			</address>
 
+			<p><a href="a.html">company's Second Webpage</a></p>
+
 			<p>This page is created by <code>HTML</code>.</p>
 			
 			<p>With help form this <ins cite="http://www.htmlcodeexamples.com.html" datetime="20031024">website</ins></p>
