use aritcle tag

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -183,7 +183,11 @@ alert('DANGER! DANGER!');
 			</dl>
 
 
-
+			article { width: 950px; display: table; }
+			<article>
+  			<h1>The article of company</h1>
+  			<p>This is the contents of the article element.</p>
+			</article>	
 
 			<address>
 			<a href="mailto:gorzon@it.com">gorzon@it.com</a><br>
