--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -182,8 +182,7 @@ alert('DANGER! DANGER!');
 			</dd>
 			</dl>
 
-
-			article { width: 950px; display: table; }
+			
 			<article>
   			<h1>The article of company</h1>
   			<p>This is the contents of the article element.</p>
@@ -193,6 +192,12 @@ alert('DANGER! DANGER!');
 			<a href="mailto:gorzon@it.com">gorzon@it.com</a><br>
 			BCC, Agargaon, Dhaka, Bangladesh.
 			</address>
+
+			<p>Company is situated in BCC Building</p>
+			<aside>
+			  <h4>BCC Building</h4>
+			  <p>Bangledesh computer council in Dhaka.</p>
+			</aside> 
 
 			<p><a href="a.html">company's Second Webpage</a></p>
 
