--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -172,7 +172,7 @@ alert('DANGER! DANGER!');
 			<p>We display our name: (using definition list)</p>	
 			<dl>
   			<dt> Gorzon
-  			</dt><dd> we are Gorzon
+  			</dt><dd> <b>we are Gorzon,</b>
   			</dd><dt> Gorzon
   			</dt><dd> Gorzon
   			</dd><dt> SOLUTIONS PVT. LTD
