use <i> & <iframe> ta

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -173,7 +173,7 @@ alert('DANGER! DANGER!');
 			<dl>
   			<dt> Gorzon
   			</dt><dd> <b>we are Gorzon,</b>
-  			</dd><dt> Gorzon
+  			</dd><dt> <i>Gorzon</i>
   			</dt><dd> Gorzon
   			</dd><dt> SOLUTIONS PVT. LTD
   			</dt><dd> GORZON SOLUTIONS PVT. LTD
@@ -236,6 +236,10 @@ alert('DANGER! DANGER!');
 			<param name="movie" value="flash/penguin.swf" />
 			<param name="quality" value="high" />
 			</object>
+
+			<iframe src="http://www.w3schools.com">
+  			<p>Your browser does not support iframes.</p>
+			</iframe>
 
 
 		</td>
