--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -242,6 +242,14 @@ alert('DANGER! DANGER!');
 			</iframe>
 
 
+			<nav>
+			<a href="/html/">Facebook</a> |
+			<a href="/css/">Twiter</a> |
+			<a href="/js/">Youtube</a> |
+			<a href="/jquery/">BCC</a>
+			</nav>
+
+
 		</td>
 	</tr>
 </table>
