Used almost 56 html tags. Did not use the form elements tags, will use them in form page.

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -258,3 +258,5 @@ alert('DANGER! DANGER!');
 </body> 
 
 </html>
+
+<!--Used almost 56 html tags. Did not use the form elements tags, will use them in form page.-->
