HTML company page; using most html tags without the form elments, final Assignment submission.

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -260,3 +260,4 @@ alert('DANGER! DANGER!');
 </html>
 
 <!--Used almost 56 html tags. Did not use the form elements tags, will use them in form page.-->
+<!--End of using most tags.-->
