use several Input elments

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
@@ -40,13 +40,78 @@
 			<h1> FAST TRACK FUTURE LEADER REGISTRATION FORM </h1>
 			<h2> Please Fill up all the Required Information.</h2>
 		</td>
-		<form action="submit.html" method="get" >
-		<td>
-			
-		</td>
-		
-
 	</tr>
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		<form action="submit.html" method="get" >
+		First Name: <input type="text" name="FirstName" autofocus value="" size="20" maxlength="20" />
+		Last Name: <input type="text" name="LastName" value="" size="20" maxlength="20"  />
+
+		</td>
+	</tr>
+	<tr>
+	</tr>	
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		Father's Name: <input type="text" name="FatherName" value="" size="20" maxlength="20" />
+		Mother's Name: <input type="text" name="MotherName" value="" size="20" maxlength="20"  />
+		</td>
+	</tr>
+	<tr>
+	</tr>	
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		Mobile: <input input type="tel" name="usrtel" value="" size="20" maxlength="20" />
+		Email: <input type="email" name="email" value="" size="20" maxlength="20"  />
+		Birthday: <input type="date" name="bday">
+		Birthday (date and time): <input type="datetime" name="bdaytime">
+		</td>
+	</tr>
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		Birthday (date and time: Local): <input type="datetime-local" name="bdaytime">
+		Select a week: <input type="week" name="week_year">
+		Your age: <input type="number" name="quantity" min="1" max="5">
+		</td>
+	</tr>	
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		Your Reading ability: min 1 max 10 <input type="range" name="points" min="1" max="10">
+		Search yourself in Google: <input type="search" name="googlesearch">
+		Select a time for birth: <input type="time" name="usr_time">
+		</td>
+	</tr>
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		Add your homepage: <input type="url" name="homepage">
+		</td>
+	</tr>	
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		Add your homepage: <input type="url" name="homepage">
+		</td>
+	</tr>				
 </table>
 
 
