Used more input, text area, radio button

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
@@ -109,9 +109,30 @@
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 		</td>
 		<td>	
-		Add your homepage: <input type="url" name="homepage">
+		Password <input type = "password" placeholder = "password">
+		Confirm Password <input type = "password" placeholder = "password">
 		</td>
-	</tr>				
+	</tr>
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		Write why should we select you:  <textarea cols="40" name="comments" rows="6">please enter your comments...
+		</textarea>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		Select your Gender: <br>
+		<input type="radio" name="title" value="mr" />Mr.<br />
+		<input type="radio" name="title" value="ms" />Ms.<br />
+		<input type="radio" name="title" value="decline" checked="checked" />decline<br />
+		</td>
+	</tr>								
 </table>
 
 
