--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
@@ -132,7 +132,21 @@
 		<input type="radio" name="title" value="ms" />Ms.<br />
 		<input type="radio" name="title" value="decline" checked="checked" />decline<br />
 		</td>
-	</tr>								
+	</tr>	
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		<fieldset style="margin: 1em; text-align: center;">
+		<legend>Select how you know about FTFL: </legend>
+		<input type="radio" name="hero"  value="Newspaper" onclick="displayHero(this)" /> Agamemnon
+		<input type="radio" name="hero"  value="Seminar" onclick="displayHero(this)" /> Achilles
+		<input type="radio" name="hero"  value="Website" onclick="displayHero(this)" /> Hector
+		<div style="height: 1em;" />
+		</fieldset>
+		</td>
+	</tr>							
 </table>
 
 
