--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
@@ -146,7 +146,31 @@
 		<div style="height: 1em;" />
 		</fieldset>
 		</td>
-	</tr>							
+	</tr>	
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		<input type="checkbox" name="checkbox1"  />Master<br />
+		<input type="checkbox" name="checkbox2" checked="checked"  />Honource<br />
+		<input type="checkbox" name="checkbox1"  />H.S.C<br />
+		<input type="checkbox" name="checkbox2"  />S.S.C<br />
+		</td>
+	</tr>	
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		Select Your City:	
+		<select name="countries">
+		   <option>Dhaka</option>
+		   <option>Khulna</option>
+		   <option>sylhet</option>
+		</select>
+		</td>
+	</tr>									
 </table>
 
 
