list with opt group

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
@@ -170,7 +170,26 @@
 		   <option>sylhet</option>
 		</select>
 		</td>
-	</tr>									
+	</tr>	
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		Select Your Thana:	
+		<select name="menuitems">
+		<optgroup id="opt1" label="Sadar">
+		   <option>Master para</option>
+		   <option>Court</option>
+		</optgroup>
+		<optgroup id="opt2" label="Tala">
+		   <option>Kashimpur</option>
+		   <option>Mohamadpur</option>
+		   <option>Dahnia</option>
+		</optgroup>
+		</select>
+		</td>
+	</tr>										
 </table>
 
 
