scroll bar & multiple select list

--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
@@ -189,7 +189,37 @@
 		</optgroup>
 		</select>
 		</td>
-	</tr>										
+	</tr>	
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		Select Your Strong Area(Select multiple if you want):	
+		<select name="computerbrands" multiple="multiple">
+		   <option value="DELL" selected="selected">Mamagement</option>
+		   <option value="IBM">Computer Science</option>
+		   <option value="HP">IT Support</option>
+		   <option value="Compaq">Networking</option>
+		   <option value="Sony">Programming Language</option>
+		</select>
+		</td>
+	</tr>	
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		Select Your district :	
+		<select name="countries2" size="4">
+		   <option value="0" selected="selected">Dhaka</option>
+		   <option value="1">Pabna</option>
+		   <option value="2">Gazipur</option>
+		   <option value="3">Commila</option>
+		   <option value="4">Norshindi</option>
+		</select>
+		</td>
+	</tr>												
 </table>
 
 
