--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
@@ -219,7 +219,17 @@
 		   <option value="4">Norshindi</option>
 		</select>
 		</td>
-	</tr>												
+	</tr>	
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		
+		<input type="hidden" name="computerType" value="DELL" />
+		<input type="hidden" name="computerOS" value="WIN2K" />
+		</td>
+	</tr>														
 </table>
 
 
