--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/form.html
@@ -237,6 +237,28 @@
 		<td>	
 		<input type="image" align="left" name="_Next" src="image/submitbutton.gif" />
 		</td>
+	</tr>
+
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		<input type="submit" name="_Previous" value="&nbsp;&lt;&nbsp;" alt="Previous" title="Previous"/>
+		<input type="submit" name="_Next" value=">" />
+		<input type="submit" name="_Finish" value=">>" />
+		<input type="submit" name="_Pause" value="||" />
+		</td>
+	</tr>		
+	<tr>
+		<td>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</td>
+		<td>	
+		<input type="reset" name="submitbutton" value="cancel" />
+		<input type="submit" name="submitbutton" value="submit" />
+
+		</td>
 	</tr>														
 </table>
 
@@ -245,5 +267,5 @@
 
 </html>
 
-<!--Used almost 56 html tags. Did not use the form elements tags, will use them in form page.-->
-<!--End of using most tags.-->
+<!--Used almost -->
+<!--End of using form elementss.-->
