--- a/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
+++ b/HTML Assignments/HTML_home_page_&_registration_from_submission_page/home.html
@@ -27,7 +27,7 @@ alert('DANGER! DANGER!');
 </script>
 
 <noscript>
-<p>What? No JavaScript?</p>
+<p>No JavaScript?</p>
 </noscript>
 </head>
 <body>        
