--- a/CSS Assignments/Student Registration Form.html
+++ b/CSS Assignments/Student Registration Form.html
@@ -13,7 +13,7 @@
  
 <table align="center" cellpadding = "10">
  
-<!----- First Name ---------------------------------------------------------->
+<!-- First Name -->
 <tr>
 <td>FIRST NAME</td>
 <td><input type="text" name="First_Name" maxlength="30"/>
@@ -21,7 +21,7 @@
 </td>
 </tr>
  
-<!----- Last Name ---------------------------------------------------------->
+<!-- Last Name -->
 <tr>
 <td>LAST NAME</td>
 <td><input type="text" name="Last_Name" maxlength="30"/>
@@ -29,7 +29,7 @@
 </td>
 </tr>
  
-<!----- Date Of Birth -------------------------------------------------------->
+<!-- Date Of Birth -->
 <tr>
 <td>DATE OF BIRTH</td>
  
